--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "curly",
+  "name": "my-electron-app",
   "version": "1.0.0",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "dev": "vite",
+    "build": "vite build",
+    "start:electron": "electron ."
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
     "axios": "^1.7.9",
-    "electron": "^33.2.1"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^3.0.0",
+    "electron": "^25.0.0",
+    "vite": "^4.0.0"
   }
 }
